syntax = "proto3";
package pattern;

option csharp_namespace = "Service";

message Pattern {
    string id = 1;
    Info info = 2;
    Canvas canvas = 3;
    Strands strands = 4;
    uint32 width = 5;
    uint32 height = 6;
    repeated StitchConfiguration configurations = 7;
    repeated Stitch stitches = 8;
    repeated Backstitch backstitches = 9;
    repeated Element elements = 10;
    string owner_id = 11;
}

message Info {
    string title = 1;
    string author = 2;
    string company = 3;
    string copyright = 4;
}

message Canvas {
    string title = 1;
}

message Strands {
    int32 full = 1;
    int32 half = 2;
    int32 quarter = 3;
    int32 three_quarter = 4;
    int32 petit = 5;
    int32 backstitch = 6;
    int32 french_knot = 7;
}

message StitchConfiguration {
    string symbol = 1;
    string hex_color = 2;
    Strands strands = 3;
}

message Stitch {
    uint32 x = 1;
    uint32 y = 2;
    StitchType type = 3;
    int32 configuration_index = 4;
    bool marked = 5;
}

enum StitchType {
    NONE = 0;
    FULL = 1;
    HALF = 2;
    QUARTER = 3;
    THREEQUARTER = 4;
    PETIT = 5;
}

message Backstitch {
    uint32 x_1 = 1;
    uint32 y_1 = 2;
    uint32 x_2 = 3;
    uint32 y_2 = 4;
    int32 configuration_index = 5;
    bool marked = 6;
}

message Element {
    uint32 x = 1;
    uint32 y = 2;
    int32 configuration_index = 3;
    ElementType type = 4;
}

enum ElementType {
    UNDEFINED = 0;
    FRENCHKNOT = 1;
    BEAD = 2;
}
